GitVersion1/objects/Account_Attachments__c.object
<CustomObject>
    <description>This object is created for uploading attachments against different events types</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used for keeping the reference of the account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Attachments</relationshipLabel>
        <relationshipName>Account_Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attachment_Name__c</fullName>
        <description>This field is used to store the attachment name from content document object</description>
        <label>Attachment Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Attendees__c</fullName>
        <description>Is used for storing attendee names</description>
        <label>Attendees</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Last_Upload_Date__c</fullName>
        <description>Used for tracking last upload date for prospect spreadsheet</description>
        <label>Last Upload Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Monthly_Uploaded_Date__c</fullName>
        <description>This field is used to load monthly uploaded value in account document object.</description>
        <label>Monthly Uploaded Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Month_Date__c</fullName>
        <description>This field is used for storing start date of the month upload</description>
        <label>Start Month Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <description>Is used to mapped topic while uploading training material</description>
        <label>Topic</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Training_Date__c</fullName>
        <description>Is used to capture Training date while loading training type of documemt</description>
        <label>Training Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>This field is used for storing types of attachment</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Display</fullName>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
                <value>
                    <fullName>For Training</fullName>
                </value>
                <value>
                    <fullName>Other Types</fullName>
                </value>
                <value>
                    <fullName>Photo</fullName>
                </value>
                <value>
                    <fullName>Prospect Lists and Activities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_Attendees__c</fullName>
        <description>Is used for storing attendee count</description>
        <label>Number of Attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Account Documents</label>
    <nameField>
        <displayFormat>AA-{0000}</displayFormat>
        <label>Account Attachments Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Attachments</pluralLabel>
    <recordTypes>
        <fullName>Display</fullName>
        <active>true</active>
        <label>Display</label>
    </recordTypes>
    <recordTypes>
        <fullName>Events</fullName>
        <active>true</active>
        <label>Events</label>
    </recordTypes>
    <recordTypes>
        <fullName>For_Training</fullName>
        <active>true</active>
        <label>For Training</label>
    </recordTypes>
    <recordTypes>
        <fullName>ProspectListAndActivities</fullName>
        <active>true</active>
        <label>Prospect Lists and Activities</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>